# frappe-fullwidth

./: .gitignore  README.md  pyproject.toml
frappe_fullwidth/: hooks.py  modules.txt
frappe_fullwidth/public/css/: frappe_fullwidth.css
frappe_fullwidth/public/js/: frappe_fullwidth.js
